@@ -1,3 +1,4 @@
+# Fityk 0.4.3
 ### the minimal example
 d.load 'nacl01.dat'
 d.range 23.0:26.0
